tdf#103826 Missing master page pane context menus in Draw

(cherry picked from commit 749fe62b32acc3159cf2756aae16df36f091a862)

changes from master: Removed officecfg part to avoid breaking
string freeze, added nullptr check to be on the safe side.

Change-Id: I355e9507692e770063a91d05efd3ebc3e2671d57